# api/news/v1/news.swagger.json
@@ -61,7 +61,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1UploadAttachmentResponse"
+              "$ref": "#/definitions/newsv1UploadAttachmentResponse"
             }
           },
           "default": {
@@ -533,6 +533,15 @@
       },
       "description": "Message that represents an arbitrary HTTP body. It should only be used for\npayload formats that can't be represented as JSON, such as raw binary or\nan HTML page.\n\n\nThis message can be used both in streaming and non-streaming API methods in\nthe request as well as the response.\n\nIt can be used as a top-level request field, which is convenient if one\nwants to extract parameters from either the URL or HTTP template into the\nrequest fields and also want access to the raw HTTP body.\n\nExample:\n\n    message GetResourceRequest {\n      // A unique request id.\n      string request_id = 1;\n\n      // The raw HTTP body is bound to this field.\n      google.api.HttpBody http_body = 2;\n\n    }\n\n    service ResourceService {\n      rpc GetResource(GetResourceRequest)\n        returns (google.api.HttpBody);\n      rpc UpdateResource(google.api.HttpBody)\n        returns (google.protobuf.Empty);\n\n    }\n\nExample with streaming methods:\n\n    service CaldavService {\n      rpc GetCalendar(stream google.api.HttpBody)\n        returns (stream google.api.HttpBody);\n      rpc UpdateCalendar(stream google.api.HttpBody)\n        returns (stream google.api.HttpBody);\n\n    }\n\nUse of this type only changes how the request and response bodies are\nhandled, all other features will continue to work unchanged."
     },
+    "newsv1UploadAttachmentResponse": {
+      "type": "object",
+      "properties": {
+        "attachment": {
+          "$ref": "#/definitions/v1NewsAttachment"
+        }
+      },
+      "description": "UploadAttachmentResponse — ответ с метаданными загруженного вложения."
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -726,15 +735,6 @@
         }
       },
       "description": "UpdateNewsResponse — ответ с обновлённой новостью."
-    },
-    "v1UploadAttachmentResponse": {
-      "type": "object",
-      "properties": {
-        "attachment": {
-          "$ref": "#/definitions/v1NewsAttachment"
-        }
-      },
-      "description": "UploadAttachmentResponse — ответ с метаданными загруженного вложения."
     }
   }
 }
